--- a/index.html
+++ b/index.html
@@ -3,33 +3,21 @@
   <head>
     <title>IP Lookup</title>
     <meta charset="UTF-8">
-    <script>
-      // https://ip-api.com/docs/api:json
-      const fetchIpInformation = async () => {
-        const ipInformation = await fetch('http://ip-api.com/json/').then((response) => {
-          return response.json();
-        });
-        handleUserBasedOnIp(ipInformation.country, ipInformation.countryCode);
-      };
-
-      const handleUserBasedOnIp = (country, countryCode) => {
-        // countryCode is DE for Germany
-        // country is Germany
-        if (countryCode === 'DE') {
-          console.log('Germany');
-          document.getElementById('countrycode').innerText = `CountryCode: ${countryCode}`;
-        }
-
-        if (country === 'Germany') {
-          console.log('true as well');
-          document.getElementById('country').innerText = `Country: ${country}`;
-        }
-      };
-
-      fetchIpInformation();
-    </script>
+    <script src="index.js"></script>
   </head>
   <body>
+    <div class="google-adsense">
+      Ad #1
+    </div>
+    <div class="google-adsense">
+      Ad #2
+    </div>
+    <div class="google-adsense">
+      Ad #3
+    </div>
+    <div class="google-adsense">
+      Ad #3
+    </div>
     <p id="country"></p>
     <p id="countrycode"></p>
   </body>
